--- a/website/src/pages/forklist.html
+++ b/website/src/pages/forklist.html
@@ -1,6 +1,6 @@
 {{> header-list}}
 
-<div class="w3-container w3-content">
+<div class="w3-container extralarge-content ">
 
 
     <table class="w3-table w3-centered">
@@ -17,7 +17,7 @@
 </div>
 
 
-<div class="w3-container w3-content">
+<div class="w3-container extralarge-content ">
     {{coin.Name}}
     <h2>{{intlGet "list_forks_for"}} <select class="w3-select" style="width:auto" name="option" id="select-forks"
                                              onchange="location = this.value;">
@@ -30,7 +30,7 @@
     <small>{{intlGet "last_update"}}: {{{localDateInSpan dateTime "datetime"}}}</small>
 </div>
 
-<div class="w3-container w3-content">
+<div class="w3-container extralarge-content ">
 
     <div class="left" id="sum-forks-top-left">
 
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<div class="w3-container w3-content">
+<div class="w3-container extralarge-content ">
 
     <div class="w3-right" id="sum-forks-top">
 
@@ -49,7 +49,7 @@
     </div>
 </div>
 
-<div class="w3-container w3-content">
+<div class="w3-container extralarge-content ">
     <div id="table-forks-outer">
 
         <table class="w3-table sortable" id="table-forks">
@@ -58,11 +58,11 @@
                 <th>{{intlGet "name"}}</th>
                 <th class="w3-hide-small">1 {{coin.shortName}}=</th>
                 <th class="w3-hide-small">{{intlGet "fork_date"}}</th>
-                <th class="w3-hide-small table-cut">{{intlGet "fork_block"}}</th>
-                <th class="w3-hide-small">{{intlGet "price"}}</th>
-                <th class="w3-hide-small">{{intlGet "change"}} ({{intlGet "24hours"}})</th>
-                <th class="w3-hide-small">{{intlGet "change"}} ({{intlGet "7days"}})</th>
-                <th class="w3-hide-small">{{intlGet "price_graph"}} ({{intlGet "7days"}})</th>
+                <th class="w3-hide-small table-cut ">{{intlGet "fork_block"}}</th>
+                <th class="w3-hide-small w3-hide-medium ">{{intlGet "price"}}</th>
+                <th class="w3-hide-small w3-hide-medium ">{{intlGet "change"}} ({{intlGet "24hours"}})</th>
+                <th class="w3-hide-small w3-hide-medium ">{{intlGet "change"}} ({{intlGet "7days"}})</th>
+                <th class="w3-hide-small w3-hide-medium hide-below-extralage">{{intlGet "price_graph"}} ({{intlGet "7days"}})</th>
                 <th>1 {{coin.shortName}}=</th>
             </tr>
             {{#each coin.forks}}
@@ -85,26 +85,27 @@
                     {{block}}{{#unless block}}-{{/unless}}
                 </td>
 
-                <td class="w3-hide-small w3-right" sorttable_customkey="{{price}}">{{{fiatWithCurrencyInSpan price
+
+                <td class="w3-hide-small w3-right w3-hide-medium " sorttable_customkey="{{price}}">{{{fiatWithCurrencyInSpan price
                     ../fiat
                     ../language}}}
                 </td>
                 <td sorttable_customkey="{{priceChangeOneDayPercentage}}{{#unless priceChangeOneDayPercentage}}-999{{/unless}}"
-                    class="w3-hide-small {{#if priceChangeOneDayIsPositive}}w3-text-green{{/if}} {{#if priceChangeOneDayIsNegative}}w3-text-red{{/if}}">
+                    class="w3-hide-small w3-hide-medium {{#if priceChangeOneDayIsPositive}}w3-text-green{{/if}} {{#if priceChangeOneDayIsNegative}}w3-text-red{{/if}}">
                     {{#if priceChangeOneDayPercentage}}{{#if
                     priceChangeOneDayIsPositive}}+{{/if}}{{formatNumber priceChangeOneDayPercentage
                     "percentage"}}{{/if}}
                 </td>
 
                 <td sorttable_customkey="{{priceChangeSevenDaysPercentage}}{{#unless priceChangeSevenDaysPercentage}}-999{{/unless}}"
-                    class="w3-hide-small {{#if priceChangeSevenDaysIsPositive}}w3-text-green{{/if}} {{#if priceChangeSevenDaysIsNegative}}w3-text-red{{/if}}">
+                    class="w3-hide-small w3-hide-medium {{#if priceChangeSevenDaysIsPositive}}w3-text-green{{/if}} {{#if priceChangeSevenDaysIsNegative}}w3-text-red{{/if}}">
                     {{#if priceChangeSevenDaysPercentage}}{{#if
                     priceChangeSevenDaysIsPositive}}+{{/if}}{{formatNumber priceChangeSevenDaysPercentage
                     "percentage"}}{{/if}}
                 </td>
 
 
-                <td class="w3-hide-small">
+                <td class="w3-hide-small w3-hide-medium hide-below-extralage">
                     {{#with priceGraphData}}
                     <svg xmlns="http://www.w3.org/2000/svg" version="1" width="{{width}}"
                          height="{{height}}">
@@ -123,14 +124,14 @@
     </div>
 </div>
 
-<div class="w3-container w3-content">
+<div class="w3-container extralarge-content ">
     <div class="w3-right" id="sum-forks">
         <b>{{coin.shortName}}-Forks = {{{fiatWithCurrencyInSpan coin.priceSumForks fiat language}}}</b>
     </div>
 </div>
 
 {{#unless mvp}}
-<div class="w3-container w3-content">
+<div class="w3-container extralarge-content ">
 
     {{intlGet "like_this_project"}} <a href="/{{language.id}}/support-allmyforks/">{{intlGet "support_us"}}</a> !
 </div>
