--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -22,7 +22,7 @@
     <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/imprint/">{{intlGet "imprint"}}</a>
     <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/privacy/">{{intlGet "data_privacy"}}</a>
     <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/disclaimer/">{{intlGet "disclaimer"}}</a>
-    <a class="w3-bar-item w3-button w3-right" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks"
+    <a class="w3-bar-item w3-button w3-right" href="https://github.com/FrontendSolutionsGmbH/allmyforks.com"
        target="new">Github</a>
 </div>
 
