--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -1,6 +1,5 @@
-
 <div class="w3-container">
-    <div id="cookie-message" class="w3-panel w3-green">
+    <div id="cookie-message" class="w3-panel w3-primary">
         <p>{{{intlGet "beta_message"}}} <a href="" onclick="window.acceptCookies(event)">{{{intlGet "cookie_ok"}}}</a>
         </p>
     </div>
@@ -11,7 +10,7 @@
 {{/unless}}
 
 
-<div class="w3-container w3-bar w3-large w3-theme-d4">
+<div class="w3-container w3-bar w3-large w3-theme-d4 w3-center">
 
     {{#unless mvp}}
     <a class="w3-bar-item w3-button" href="/{{language.id}}/what-is-a-fork/">{{intlGet "whatisafork"}}</a>
@@ -19,13 +18,28 @@
         {{formatMessage (intlGet "howtoclaimmyforkedcoin") name="_____"}}</a>
     {{/unless}}
 
-    <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/imprint/">{{intlGet "imprint"}}</a>
-    <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/privacy/">{{intlGet "data_privacy"}}</a>
-    <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/disclaimer/">{{intlGet "disclaimer"}}</a>
-    <a class="w3-bar-item w3-button w3-right" href="https://github.com/FrontendSolutionsGmbH/allmyforks.com"
+    <a class="w3-bar-item2 w3-button" href="https://github.com/FrontendSolutionsGmbH/allmyforks.com"
        target="new">Github</a>
+    <a class="w3-bar-item2 w3-button" href="/{{language.id}}/disclaimer/">{{intlGet "disclaimer"}}</a>
+    <a class="w3-bar-item2 w3-button" href="/{{language.id}}/privacy/">{{intlGet "data_privacy"}}</a>
+    <a class="w3-bar-item2 w3-button" href="/{{language.id}}/imprint/">{{intlGet "imprint"}}</a>
 </div>
 
+<div class="w3-container w3-bar w3-large w3-theme-d4 w3-center">
+
+    <div class="w3-bar-item2">
+        <div style="width:64px;margin:auto">
+            <a href="/{{language.id}}">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0, 0, 64, 64">
+                    <path fill="#f7931a" d="M63 40A32 32 0 1 1 1 24a32 32 0 0 1 62 16z"/>
+                    <path fill="#FFF"
+                          d="M46 27c1-4-2-6-7-8l2-5-4-1-1 5h-3l1-6-3-1-2 6-2-1-5-1-1 4 3 1 1 2-1 6-3 9-1 1h-3l-1 4 4 1h3l-2 6 4 1 1-6 3 1-1 6 3 1 1-6c6 1 11 1 13-5 1-4 0-7-3-8 2-1 4-2 4-6zm-8 12c-1 4-8 2-11 1l2-8c3 1 10 2 9 7zm1-12c-1 4-7 2-9 2l2-7c2 0 8 1 7 5z"/>
+                </svg>
+            </a>
+        </div>
+    </div>
+
+</div>
 
 {{> javascript}}
 
