--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -29,7 +29,7 @@
 
     <div class="w3-bar-item2">
         <div style="width:64px;margin:auto">
-            <a href="/{{language.id}}">
+            <a href="/{{language.id}}"  title="Go to home">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0, 0, 64, 64">
                     <path fill="#f7931a" d="M63 40A32 32 0 1 1 1 24a32 32 0 0 1 62 16z"/>
                     <path fill="#FFF"
