--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -1,4 +1,4 @@
-<div class="w3-container">
+<div class="w3-container js-message-container">
     <div id="cookie-message" class="w3-panel w3-primary">
         <p>{{{intlGet "beta_message"}}} <a href="" onclick="window.acceptCookies(event)">{{{intlGet "cookie_ok"}}}</a>
         </p>
@@ -10,7 +10,7 @@
 {{/unless}}
 
 
-<div class="w3-container w3-bar w3-large w3-theme-d4 w3-center">
+<div class="w3-container w3-bar w3-large w3-theme-d4 w3-center js-nav-bottom">
 
     {{#unless mvp}}
     <a class="w3-bar-item w3-button" href="/{{language.id}}/what-is-a-fork/">{{intlGet "whatisafork"}}</a>
@@ -25,15 +25,23 @@
     <a class="w3-bar-item2 w3-button" href="/{{language.id}}/imprint/">{{intlGet "imprint"}}</a>
 </div>
 
-<div class="w3-container w3-bar w3-large w3-theme-d4 w3-center">
+<div class="w3-container w3-bar w3-large w3-theme-d4 w3-center js-footer">
 
     <div class="w3-bar-item2">
         <div style="width:64px;margin:auto">
             <a href="/{{language.id}}"  title="Go to home">
-                <svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0, 0, 64, 64">
-                    <path fill="#f7931a" d="M63 40A32 32 0 1 1 1 24a32 32 0 0 1 62 16z"/>
-                    <path fill="#FFF"
-                          d="M46 27c1-4-2-6-7-8l2-5-4-1-1 5h-3l1-6-3-1-2 6-2-1-5-1-1 4 3 1 1 2-1 6-3 9-1 1h-3l-1 4 4 1h3l-2 6 4 1 1-6 3 1-1 6 3 1 1-6c6 1 11 1 13-5 1-4 0-7-3-8 2-1 4-2 4-6zm-8 12c-1 4-8 2-11 1l2-8c3 1 10 2 9 7zm1-12c-1 4-7 2-9 2l2-7c2 0 8 1 7 5z"/>
+                <svg version="1.1" id="js_logo_unten" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#CC1B59;}
+                </style>
+                <g>
+                    <path class="st0" d="M38.8,5.8l-26.2,7.6c-0.9,0.3-1.4,1.2-1.1,2.1l0.7,2.6c1.3-1.2,2.9-2.2,4.7-2.7c4.7-1.4,9.6,0.5,12.3,4.3
+                        L41.7,16c0.9-0.3,1.4-1.2,1.1-2.1l-2-7C40.6,6.1,39.7,5.6,38.8,5.8z"/>
+                    <path class="st0" d="M43.6,22.5l-12.3,3.6c0,4.9-3.2,9.5-8.1,10.9c-1.8,0.5-3.7,0.6-5.4,0.2l4.8,16.7c0.3,0.9,1.2,1.4,2.1,1.1l7-2
+                        c0.9-0.3,1.4-1.2,1.1-2.1l-3.8-13.2l17.7-5.1c0.9-0.3,1.4-1.2,1.1-2.1l-2-7C45.4,22.7,44.5,22.2,43.6,22.5z"/>
+                    <circle class="st0" cx="20" cy="26.1" r="4.9"/>
+                </g>
                 </svg>
             </a>
         </div>
