--- a/website/src/inc/header.html
+++ b/website/src/inc/header.html
@@ -33,75 +33,51 @@
 
     {{> styles}}
 
+    <style>
+
+        table.sortable thead {
+            background-color: #eee;
+            color: #666666;
+            font-weight: bold;
+            cursor: default;
+        }
+
+    </style>
+
+
 </head>
 
 <body class="w3-theme-l3">
 
-<div class="js-header">
-    <a href="/{{language.id}}" class="js-logo">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 154 36" style="enable-background:new 0 0 154 36;" xml:space="preserve">
-        <style type="text/css">
-            .st0{fill:#020203;}
-            .st1{fill:#CC1B59;}
-        </style>
-        <g>
-            <path class="st0" d="M41,10.1h2.6l6.1,16.8h-2.5l-1.8-5h-6.6l-1.8,5h-2.3L41,10.1z M44.8,20l-2.6-7.4L39.5,20H44.8z"/>
-            <path class="st0" d="M51.8,10.1h2.1v16.8h-2.1V10.1z"/>
-            <path class="st0" d="M57.3,10.1h2.1v16.8h-2.1V10.1z"/>
-            <path class="st1" d="M74.2,10h5.1v16.9H76V15.5c0-0.3,0-0.8,0-1.4c0-0.6,0-1,0-1.4l-3.2,14.1h-3.4l-3.2-14.1c0,0.3,0,0.8,0,1.4
-                c0,0.6,0,1.1,0,1.4v11.4H63V10h5.1l3.1,13.3L74.2,10z"/>
-            <path class="st1" d="M83.1,29.3l0.4,0c0.3,0,0.6,0,0.9,0c0.3,0,0.5-0.1,0.7-0.3c0.2-0.1,0.4-0.4,0.5-0.8s0.2-0.7,0.2-0.8l-4.6-13
-                h3.6l2.7,9.2l2.6-9.2h3.5l-4.3,12.3c-0.8,2.4-1.5,3.8-2,4.4s-1.4,0.9-2.9,0.9c-0.3,0-0.5,0-0.7,0c-0.2,0-0.4,0-0.8,0V29.3z"/>
-            <path class="st0" d="M96.4,10.1H108v2.1h-9.4v5.1h8.2v2h-8.2v7.6h-2.3V10.1z"/>
-            <path class="st0" d="M119.4,15.9c1.1,1.1,1.6,2.6,1.6,4.6c0,2-0.5,3.6-1.4,4.9c-1,1.3-2.4,1.9-4.4,1.9c-1.7,0-3-0.6-4-1.7
-                c-1-1.1-1.5-2.7-1.5-4.6c0-2.1,0.5-3.7,1.6-4.9c1-1.2,2.4-1.8,4.2-1.8C117,14.3,118.3,14.8,119.4,15.9z M118.1,24
-                c0.5-1,0.8-2.2,0.8-3.4c0-1.1-0.2-2.1-0.5-2.8c-0.6-1.1-1.6-1.7-3-1.7c-1.2,0-2.1,0.5-2.7,1.4c-0.6,1-0.8,2.1-0.8,3.5
-                c0,1.3,0.3,2.4,0.8,3.3c0.6,0.9,1.5,1.3,2.7,1.3C116.7,25.6,117.6,25,118.1,24z"/>
-            <path class="st0" d="M123.9,14.7h2v2.1c0.2-0.4,0.6-0.9,1.2-1.5s1.3-0.9,2.2-0.9c0,0,0.1,0,0.2,0c0.1,0,0.2,0,0.5,0v2.2
-                c-0.1,0-0.2,0-0.3,0c-0.1,0-0.2,0-0.3,0c-1,0-1.8,0.3-2.4,1S126,19,126,19.9v7h-2.1V14.7z"/>
-            <path class="st0" d="M131.9,10.1h2v9.8l5.3-5.2h2.6l-4.7,4.6l5,7.7h-2.6l-3.9-6.2l-1.7,1.6v4.6h-2V10.1z"/>
-            <path class="st0" d="M145.2,23.1c0.1,0.7,0.2,1.2,0.5,1.6c0.5,0.7,1.4,1,2.8,1c0.8,0,1.5-0.2,2.1-0.5c0.6-0.3,0.9-0.8,0.9-1.5
-                c0-0.5-0.2-0.9-0.7-1.2c-0.3-0.2-0.9-0.4-1.8-0.6l-1.7-0.4c-1.1-0.3-1.8-0.5-2.3-0.9c-0.9-0.6-1.3-1.3-1.3-2.3
-                c0-1.2,0.4-2.1,1.3-2.8c0.8-0.7,2-1.1,3.4-1.1c1.9,0,3.2,0.5,4,1.6c0.5,0.7,0.8,1.4,0.8,2.2h-1.9c0-0.5-0.2-0.9-0.5-1.3
-                c-0.5-0.5-1.3-0.8-2.5-0.8c-0.8,0-1.4,0.1-1.8,0.4c-0.4,0.3-0.6,0.7-0.6,1.2c0,0.5,0.3,1,0.8,1.3c0.3,0.2,0.8,0.4,1.4,0.5l1.4,0.3
-                c1.5,0.4,2.5,0.7,3,1c0.8,0.5,1.2,1.4,1.2,2.5c0,1.1-0.4,2-1.3,2.8c-0.8,0.8-2.1,1.2-3.8,1.2c-1.8,0-3.2-0.4-3.9-1.2
-                c-0.8-0.8-1.2-1.9-1.2-3.1H145.2z"/>
-        </g>
-        <g>
-            <path class="st1" d="M19.8,0L0.9,5.5C0.3,5.7-0.1,6.4,0.1,7l0.5,1.8C1.5,8,2.7,7.3,4,6.9c3.4-1,6.9,0.4,8.9,3.1l9-2.6
-                c0.6-0.2,1-0.8,0.8-1.5l-1.5-5C21.1,0.2,20.5-0.1,19.8,0z"/>
-            <path class="st1" d="M23.3,12.1l-8.9,2.6c0,3.5-2.3,6.8-5.9,7.9c-1.3,0.4-2.7,0.4-3.9,0.1l3.5,12.1c0.2,0.6,0.8,1,1.5,0.8l5-1.5
-                c0.6-0.2,1-0.8,0.8-1.5l-2.8-9.5l12.8-3.7c0.6-0.2,1-0.8,0.8-1.5l-1.5-5C24.6,12.2,23.9,11.9,23.3,12.1z"/>
-            <circle class="st1" cx="6.3" cy="14.7" r="3.6"/>
-        </g>
-    </a>
-    <div class="js-header-select-section">
-        <div class="js-custom-select">
-            <label for="select-languages"></label>
-            <select
-                title="languages"
-                aria-label="language"
-                name="select-languages"
-                id="select-languages"
-                onchange="location = this.value;">
-                {{#each selectLanguages}}
-                    <option value="{{value}}" {{selected}}>{{title}}</option>
-                {{/each}}
-            </select>
-        </div>
-        <div class="js-custom-select">
-            <label for="select-currencies"></label>
-            <select
-                title="currency"
-                aria-label="currency"
-                name="select-currencies"
-                id="select-currencies"
-                onchange="location = this.value;">
-                {{#each selectFiats}}
-                    <option value="{{value}}" {{selected}} data-fiat-option="{{id}}">{{title}}</option>
-                {{/each}}
-            </select>
+<div class="w3-bar w3-theme-d4">
+
+    <div class="w3-bar-item">
+        <div style="width:22px">
+            <a href="/{{language.id}}" title="Go to home">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0, 0, 64, 64">
+                    <path fill="#f7931a" d="M63 40A32 32 0 1 1 1 24a32 32 0 0 1 62 16z"/>
+                    <path fill="#FFF"
+                          d="M46 27c1-4-2-6-7-8l2-5-4-1-1 5h-3l1-6-3-1-2 6-2-1-5-1-1 4 3 1 1 2-1 6-3 9-1 1h-3l-1 4 4 1h3l-2 6 4 1 1-6 3 1-1 6 3 1 1-6c6 1 11 1 13-5 1-4 0-7-3-8 2-1 4-2 4-6zm-8 12c-1 4-8 2-11 1l2-8c3 1 10 2 9 7zm1-12c-1 4-7 2-9 2l2-7c2 0 8 1 7 5z"/>
+                </svg>
+            </a>
         </div>
     </div>
+
+    <a class="w3-bar-item w3-button" href="/{{language.id}}">allmyforks.com</a>
+  <span class="w3-bar-item w3-right"><select title="languages" aria-label="language" style="width:auto" name="select-languages" id="select-languages"
+                                             onchange="location = this.value;">
+      {{#each selectLanguages}}
+        <option value="{{value}}" {{selected}}>{{title}}</option>
+      {{/each}}
+
+  </select></span>
+  
+  
+  <span class="w3-bar-item w3-right"><select title="currency" aria-label="currency" style="width:auto" name="select-currencies" id="select-currencies"
+                                             onchange="location = this.value;">
+         {{#each selectFiats}}
+        <option value="{{value}}" {{selected}} data-fiat-option="{{id}}">{{title}}</option>
+      {{/each}}
+  </select></span>
+
 </div>
